animated sidebar to open and close

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <input type="checkbox" id="check" />
     <label for="check">
       <i class="fa fa-bars" aria-hidden="true" id="btn"></i>
-      <i class="fa fa-window-close" aria-hidden="true" id="cancel"></i>
+      <i class="fa fa-times" aria-hidden="true" id="cancel"></i>
     </label>
     <div class="sidebar">
       <header>Navigation</header>
