added footer credits

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
         </li>
       </ul>
     </div>
-    <main></main>
+    <main>
+      <!-- <footer>
+        <p>Background by</p>
+        <a href="https://www.instagram.com/the_space_traveller/"
+          >the_space_traveler
+        </a>
+      </footer> -->
+    </main>
   </body>
 </html>
