set background video

--- a/index.html
+++ b/index.html
@@ -19,46 +19,55 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <input type="checkbox" id="check" />
-    <label for="check">
-      <i class="fa fa-bars" aria-hidden="true" id="btn"></i>
-      <i class="fa fa-times" aria-hidden="true" id="cancel"></i>
-    </label>
-    <div class="sidebar">
-      <header>Navigation</header>
-      <ul>
-        <li>
-          <a href=""
-            ><i class="fa fa-ravelry" aria-hidden="true"></i>Dashboard</a
-          >
-        </li>
-        <li>
-          <a href=""><i class="fa fa-book" aria-hidden="true"></i>Bio</a>
-        </li>
-        <li>
-          <a href=""
-            ><i class="fa fa-graduation-cap" aria-hidden="true"></i>Education</a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><i class="fa fa-folder-open-o" aria-hidden="true"></i>Portfolio</a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a
-          >
-        </li>
-      </ul>
+    <video autoplay muted loop id="background-video">
+      <source src="Images/Space.mp4" type="video/mp4" />
+      Your browser does not support HTML5 video.
+    </video>
+    <!-- <image src="Images/space.png" id="myVideo"> -->
+    <div class="content">
+      <input type="checkbox" id="check" />
+      <label for="check">
+        <i class="fa fa-bars" aria-hidden="true" id="btn"></i>
+        <i class="fa fa-times" aria-hidden="true" id="cancel"></i>
+      </label>
+      <div class="sidebar">
+        <header>Navigation</header>
+        <ul>
+          <li>
+            <a href=""
+              ><i class="fa fa-ravelry" aria-hidden="true"></i>Dashboard</a
+            >
+          </li>
+          <li>
+            <a href=""><i class="fa fa-book" aria-hidden="true"></i>Bio</a>
+          </li>
+          <li>
+            <a href=""
+              ><i class="fa fa-graduation-cap" aria-hidden="true"></i
+              >Education</a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><i class="fa fa-folder-open-o" aria-hidden="true"></i
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a
+            >
+          </li>
+        </ul>
+      </div>
+      <main>
+        <!-- <footer>
+          <p>Background by</p>
+          <a href="https://www.instagram.com/the_space_traveller/"
+            >the_space_traveler
+          </a>
+        </footer> -->
+      </main>
     </div>
-    <main>
-      <!-- <footer>
-        <p>Background by</p>
-        <a href="https://www.instagram.com/the_space_traveller/"
-          >the_space_traveler
-        </a>
-      </footer> -->
-    </main>
   </body>
 </html>
