--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <i class="fa fa-times" aria-hidden="true" id="cancel"></i>
       </label>
       <div class="sidebar">
-        <header>Navigation</header>
+        <header>Get To Know Me</header>
         <ul>
           <li>
             <a href=""
