created bio page

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <i class="fa fa-times" aria-hidden="true" id="cancel"></i>
       </label>
       <div class="sidebar">
-        <header>Get To Know Me</header>
+        <header>About Me</header>
         <ul>
           <li>
-            <a href=""
-              ><i class="fa fa-ravelry" aria-hidden="true"></i>Dashboard</a
+            <a href="index.html"
+              ><i class="fa fa-ravelry" aria-hidden="true"></i>Home</a
             >
           </li>
           <li>
@@ -60,12 +60,29 @@
         </ul>
       </div>
       <main>
-        <!-- <footer>
-          <p>Background by</p>
-          <a href="https://www.instagram.com/the_space_traveller/"
-            >the_space_traveler
-          </a>
-        </footer> -->
+        <div class="intro-box">
+          <h3>Hello, my name is</h3>
+          <h1>
+            <span class="first-letter">H</span>ayden
+            <span class="first-letter">W</span>est
+          </h1>
+          <h4>I build Websites for a living</h4>
+          <br />
+          <p>&lt;p&gt;</p>
+          <p>&emsp; Fullstack / Wordpress</p>
+          <p>&lt;/p&gt;</p>
+          <br />
+          <button>Get In Touch!</button>
+        </div>
+        <footer>
+          <p>copyright 2022</p>
+          <p>
+            Background by
+            <a href="https://www.instagram.com/the_space_traveller/"
+              >the_space_traveler
+            </a>
+          </p>
+        </footer>
       </main>
     </div>
   </body>
