Added bio and picture~

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             >
           </li>
           <li>
-            <a href=""><i class="fa fa-book" aria-hidden="true"></i>Bio</a>
+            <a href="bio.html"
+              ><i class="fa fa-book" aria-hidden="true"></i>Bio</a
+            >
           </li>
           <li>
             <a href=""
