finished bio page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             >
           </li>
           <li>
-            <a href=""
+            <a href="skills.html"
               ><i class="fa fa-graduation-cap" aria-hidden="true"></i
               >Education</a
             >
