created skill page

--- a/skills.html
+++ b/skills.html
@@ -19,16 +19,12 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <!-- *****
-      BACKGROUND
-    ***** -->
+    <!-- BACKGROUND -->
     <video autoplay muted loop id="background-video">
       <source src="Images/Stars.mp4" type="video/mp4" />
       Your browser does not support HTML5 video.
     </video>
-    <!-- *****
-      SIDEBAR
-    ***** -->
+    <!-- SIDEBAR -->
     <div class="content">
       <input type="checkbox" id="check" />
       <label for="check">
@@ -67,13 +63,102 @@
         </ul>
       </div>
       <main>
-        <!-- *****
-        MAIN
-        ***** -->
-        <div class="body-box"></div>
-        <!-- *****
-          FOOTER
-        ***** -->
+        <!-- MAIN -->
+        <div class="body-box">
+          <div class="skills-box">
+            <!-- Front End -->
+            <h2>Front-End</h2>
+            <br />
+            <div class="skill-set front-end">
+              <p class="skill-description">
+                Front-End is my passion. I consider myself a creative by nature
+                and I love the limitless innovation that can be found in design.
+                Whether building from a template, or creating something entirely
+                unique, I try to add a bit of style and flair to any project I
+                undertake.
+              </p>
+              <div class="skills-container">
+                <p>HTML</p>
+                <div class="bar-container">
+                  <div class="skills html"></div>
+                </div>
+
+                <p>CSS</p>
+                <div class="bar-container">
+                  <div class="skills css"></div>
+                </div>
+
+                <p>JavaScript / ES6</p>
+                <div class="bar-container">
+                  <div class="skills js"></div>
+                </div>
+
+                <p>React</p>
+                <div class="bar-container">
+                  <div class="skills react"></div>
+                </div>
+              </div>
+            </div>
+            <!-- Back End -->
+            <h2>Back-End</h2>
+            <br />
+            <div class="skill-set back-end">
+              <p class="skill-description">
+                I believe that to truely be a master Developer, you have to know
+                the full stack. Just as the best conductors know how every
+                individual instrument contributes to the symphony, a good
+                devloper should know how each individual piece make up the
+                larger whole.
+              </p>
+              <div class="skills-container">
+                <p>Node.JS</p>
+                <div class="bar-container">
+                  <div class="skills node"></div>
+                </div>
+
+                <p>SQL / NoSQL</p>
+                <div class="bar-container">
+                  <div class="skills sql"></div>
+                </div>
+
+                <p>Express / Ajax</p>
+                <div class="bar-container">
+                  <div class="skills express"></div>
+                </div>
+              </div>
+            </div>
+            <!-- Misc -->
+            <h2>Misc</h2>
+            <br />
+            <div class="skill-set misc">
+              <p class="skill-description">
+                This is where I show off. In my freelance work I've done
+                everthing from photo-editing, to logo design, to drafting the
+                actual content itself. I believe I have an eye for what makes a
+                good website pop, and I want to be able to bring more to the
+                table than just being able to type code. Though i'm pretty good
+                at that too.
+              </p>
+              <div class="skills-container">
+                <p>Wordpress</p>
+                <div class="bar-container">
+                  <div class="skills wordpress"></div>
+                </div>
+
+                <p>Photoshop</p>
+                <div class="bar-container">
+                  <div class="skills photoshop"></div>
+                </div>
+
+                <p>Writing</p>
+                <div class="bar-container">
+                  <div class="skills writing"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- FOOTER -->
         <footer>
           <p>copyright 2022</p>
           <p>
