added skills stylings

--- a/skills.html
+++ b/skills.html
@@ -65,17 +65,19 @@
       <main>
         <!-- MAIN -->
         <div class="body-box">
+          <br />
+          <br />
           <div class="skills-box">
             <!-- Front End -->
             <h2>Front-End</h2>
             <br />
             <div class="skill-set front-end">
               <p class="skill-description">
-                Front-End is my passion. I consider myself a creative by nature
-                and I love the limitless innovation that can be found in design.
-                Whether building from a template, or creating something entirely
-                unique, I try to add a bit of style and flair to any project I
-                undertake.
+                &nbsp; &nbsp; &nbsp; &nbsp; Front-End is my passion. I consider
+                myself a creative by nature and I love the limitless innovation
+                that can be found in design. Whether building from a template,
+                or creating something entirely unique, I try to add a bit of
+                style and flair to any project I undertake.
               </p>
               <div class="skills-container">
                 <p>HTML</p>
@@ -99,16 +101,18 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="skills-box">
             <!-- Back End -->
-            <h2>Back-End</h2>
+            <h2 class="alt-skill">Back-End</h2>
             <br />
             <div class="skill-set back-end">
               <p class="skill-description">
-                I believe that to truely be a master Developer, you have to know
-                the full stack. Just as the best conductors know how every
-                individual instrument contributes to the symphony, a good
-                devloper should know how each individual piece make up the
-                larger whole.
+                &nbsp; &nbsp; &nbsp; &nbsp; I believe that to truely be a master
+                Developer, you have to know the full stack. Just as the best
+                conductors know how every individual instrument contributes to
+                the symphony, a good devloper should know how each individual
+                piece make up the larger whole.
               </p>
               <div class="skills-container">
                 <p>Node.JS</p>
@@ -127,17 +131,19 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="skills-box">
             <!-- Misc -->
             <h2>Misc</h2>
             <br />
             <div class="skill-set misc">
               <p class="skill-description">
-                This is where I show off. In my freelance work I've done
-                everthing from photo-editing, to logo design, to drafting the
-                actual content itself. I believe I have an eye for what makes a
-                good website pop, and I want to be able to bring more to the
-                table than just being able to type code. Though i'm pretty good
-                at that too.
+                &nbsp; &nbsp; &nbsp; &nbsp; This is where I show off. In my
+                freelance work I've done everthing from photo-editing, to logo
+                design, to drafting the actual content itself. I believe I have
+                an eye for what makes a good website pop, and I want to be able
+                to bring more to the table than just being able to type code.
+                Though i'm pretty good at that too.
               </p>
               <div class="skills-container">
                 <p>Wordpress</p>
