--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <title>My Portfolio</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
     <video autoplay muted loop id="background-video">
       <source src="Images/Space.mp4" type="video/mp4" />
       Your browser does not support HTML5 video.
     </video>
+    <!-- SIDEBAR -->
     <div class="content">
       <input type="checkbox" id="check" />
       <label for="check">
@@ -60,6 +62,7 @@
           </li>
         </ul>
       </div>
+      <!-- MAIN -->
       <main>
         <div class="intro-box">
           <h3>Hello, my name is</h3>
