--- a/skills.html
+++ b/skills.html
@@ -3,9 +3,9 @@
   <head>
     <!--
       Author: Hayden West
-      Date: 5/5/2022
-      File: Bio.html
-      Desc: Bio Page for final project
+      Date: 5/10/2022
+      File: skills.html
+      Desc: Skils Page for final project
 
       Dependencies: Uses "FontAwesome"
     -->
