--- a/contact.html
+++ b/contact.html
@@ -19,16 +19,12 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <!-- *****
-      BACKGROUND
-    ***** -->
+    <!-- BACKGROUND -->
     <video autoplay muted loop id="background-video">
       <source src="Images/Galaxy.mp4" type="video/mp4" />
       Your browser does not support HTML5 video.
     </video>
-    <!-- *****
-      SIDEBAR
-    ***** -->
+    <!-- SIDEBAR -->
     <div class="content">
       <input type="checkbox" id="check" />
       <label for="check">
@@ -66,14 +62,10 @@
           </li>
         </ul>
       </div>
+      <!-- MAIN -->
       <main>
-        <!-- *****
-        MAIN
-        ***** -->
         <div class="body-box"></div>
-        <!-- *****
-          FOOTER
-        ***** -->
+        <!-- FOOTER -->
         <footer>
           <p>copyright 2022</p>
           <p>
