created portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,36 @@
       </div>
       <main>
         <!-- MAIN -->
-        <div class="body-box"></div>
+        <div class="body-box">
+          <br />
+          <h1>Work I've Done</h1>
+          <div class="work-box">
+            <img src="Images/TestScreen.png" />
+            <div class="work-description">
+              <h4>Job Title</h4>
+              <p>
+                TEST I AM BOOM BOOM IN THE BOOM BOOM HERE ALALAGATOR SCRIMATOR
+              </p>
+              <div class="work-tech">
+                <span>TECH</span><span>TECH</span><span>TECH</span>
+              </div>
+              <button>CLICK</button>
+            </div>
+          </div>
+          <div class="work-box alt">
+            <img src="Images/TestScreen.png" />
+            <div class="work-description">
+              <h4>Job Title</h4>
+              <p>
+                TEST I AM BOOM BOOM IN THE BOOM BOOM HERE ALALAGATOR SCRIMATOR
+              </p>
+              <div class="work-tech">
+                <span>TECH</span><span>TECH</span><span>TECH</span>
+              </div>
+              <button href="">CLICK</button>
+            </div>
+          </div>
+        </div>
         <!-- FOOTER -->
         <footer>
           <p>copyright 2022</p>
