--- a/skills.html
+++ b/skills.html
@@ -104,9 +104,9 @@
           </div>
           <div class="skills-box">
             <!-- Back End -->
-            <h2 class="alt-skill">Back-End</h2>
+            <h2 class="alt">Back-End</h2>
             <br />
-            <div class="skill-set back-end">
+            <div class="skill-set alt">
               <p class="skill-description">
                 &nbsp; &nbsp; &nbsp; &nbsp; I believe that to truely be a master
                 Developer, you have to know the full stack. Just as the best
