filled in job details

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,29 +68,32 @@
           <br />
           <h1>Work I've Done</h1>
           <div class="work-box">
-            <img src="Images/TestScreen.png" />
+            <img src="Images/Shelby.png" />
             <div class="work-description">
-              <h4>Job Title</h4>
+              <h4>Shelby Weddings & Events</h4>
               <p>
-                TEST I AM BOOM BOOM IN THE BOOM BOOM HERE ALALAGATOR SCRIMATOR
+                A website for an events buisness specializing in weddings in the
+                Califorina area.
               </p>
               <div class="work-tech">
-                <span>TECH</span><span>TECH</span><span>TECH</span>
+                <span>Wordpress</span><span>Yoast</span><span>WPForms</span>
               </div>
-              <button>CLICK</button>
+              <a href="https://shelbyweddingsandevents.com/">CLICK</a>
             </div>
           </div>
           <div class="work-box alt">
-            <img src="Images/TestScreen.png" />
+            <img src="Images/Venue.png" />
             <div class="work-description">
-              <h4>Job Title</h4>
+              <h4>Venue in the Hills</h4>
               <p>
-                TEST I AM BOOM BOOM IN THE BOOM BOOM HERE ALALAGATOR SCRIMATOR
+                A minimalist website for a hosting buisness in Four Peaks,
+                Arizona.
               </p>
               <div class="work-tech">
-                <span>TECH</span><span>TECH</span><span>TECH</span>
+                <span>Wordpress</span><span>Elementor</span
+                ><span>Bluehost</span>
               </div>
-              <button href="">CLICK</button>
+              <a href="http://venueinthehills.com">CLICK</a>
             </div>
           </div>
         </div>
